--- a/translations/help.de.xlf
+++ b/translations/help.de.xlf
@@ -3854,9 +3854,8 @@ Diese Berufe sind aber den Spielern vorbehalten sind, die als Held spielen.</not
         <source>Jeder Spieler startet in "Die Verdammten" als einfacher Bürger. 
 Daneben gibt es jedoch noch &lt;strong&gt;7 außergewöhnliche Berufe&lt;/strong&gt;. 
 Diese Berufe sind aber den Spielern vorbehalten sind, die als Held spielen.</source>
-        <target><![CDATA[Jeder Spieler startet in "MyHordes" als einfacher Bürger. 
-Daneben gibt es jedoch noch <strong>7 außergewöhnliche Berufe</strong>. 
-Diese Berufe sind aber den Spielern vorbehalten sind, die als Held spielen.]]></target>
+        <target><![CDATA[Jeder Spieler startet in "MyHordes" entweder als einfacher Bürger oder sucht sich einen von <strong>7 außergewöhnlichen Berufe</strong> aus.
+Spieler mit solchen Berufen werden als Helden bezeichnet.]]></target>
       </segment>
     </unit>
     <unit id="9ySXrH1">
@@ -3873,7 +3872,7 @@ Der Buddler zum Beispiel findet in der Wüste im Durchschnitt mehr Gegenstände 
 Einwohner. Der Einsiedler hat bessere Überlebenschancen beim Campen in der Wildnis.
 Darüber hinaus erhält man je nach Beruf einen &lt;strong&gt;speziellen Gegenstand&lt;/strong&gt;. 
 Der Aufklärer besitzt eine Tarnkleidung, der Buddler eine Schaufel usw...</source>
-        <target><![CDATA[Helden können zum Beginn einer Stadt einen Beruf wählen. Jeder Beruf bietet besondere Vorteile. 
+        <target><![CDATA[Jeder Beruf bietet besondere Vorteile.
 Der Buddler zum Beispiel findet in der Wüste im Durchschnitt mehr Gegenstände als ein normaler 
 Einwohner. Der Einsiedler hat bessere Überlebenschancen beim Campen in der Wildnis.
 Darüber hinaus erhält man je nach Beruf einen <strong>speziellen Gegenstand</strong>. 
@@ -4111,7 +4110,7 @@ Achtung: Wenn er in seiner Deckung eine Aktion ausführt, verliert er seine Tarn
       </notes>
       <segment>
         <source>Wenn ein Wächter Nachtwache hält, gibt er der Stadt 30 zusätzliche Verteidigungspunkte. Außerdem haben sie eine um 5% höhere Überlebenschance, wenn der Angriff der Zombiehorden den Verteidigungspunkten der Stadt unterlegen ist.</source>
-        <target>Wenn ein Wächter Nachtwache hält, gibt er der Stadt 30 zusätzliche Verteidigungspunkte. Außerdem haben sie eine um 5% höhere Überlebenschance, wenn der Angriff der Zombiehorden den Verteidigungspunkten der Stadt unterlegen ist.</target>
+        <target>Wenn ein Wächter Nachtwache hält, gibt er der Stadt 30 zusätzliche Verteidigungspunkte. Außerdem haben sie eine um 5% höhere Überlebenschance.</target>
       </segment>
     </unit>
     <unit id="xfwq_Tw">
@@ -6208,7 +6207,7 @@ Die Punkte für den Titel "Spiritueller Führer" kumulieren sich mit jedem Tag. 
       </notes>
       <segment>
         <source>Negierung: Wenn eine Privatstadt nicht bis Mitternacht des übernächsten Tages gefüllt ist, wird sie wieder negiert. Der Stadtgründer erhält dann alle investierten Heldentage zurück. Alle bereits getätigten Einschreibungen werden rückgängig gemacht.</source>
-        <target>Negierung: Wenn eine Privatstadt nicht bis Mitternacht des übernächsten Tages gefüllt ist, wird sie wieder negiert. Der Stadtgründer erhält dann alle investierten Heldentage zurück. Alle bereits getätigten Einschreibungen werden rückgängig gemacht.</target>
+        <target>Negierung: Wenn eine Privatstadt nicht bis Mitternacht des übernächsten Tages gefüllt ist, wird sie wieder negiert. Alle bereits getätigten Einschreibungen werden rückgängig gemacht.</target>
       </segment>
     </unit>
     <unit id="QvajNih">
