--- a/translations/help.en.xlf
+++ b/translations/help.en.xlf
@@ -3800,7 +3800,7 @@ Diese Berufe sind aber den Spielern vorbehalten sind, die als Held spielen.</not
         <source>Jeder Spieler startet in "Die Verdammten" als einfacher Bürger. 
 Daneben gibt es jedoch noch &lt;strong&gt;7 außergewöhnliche Berufe&lt;/strong&gt;. 
 Diese Berufe sind aber den Spielern vorbehalten sind, die als Held spielen.</source>
-        <target><![CDATA[<strong>All citizens in MyHordes start out as a simple Resident</strong>. Heroes choose their own job which gives them an advantage in a given domain: a Scavenger, for example, can find more objects in the desert than an average citizen.]]></target>
+        <target><![CDATA[<strong>All citizens in MyHordes start out as a simple Resident</strong> or choose their own job which gives them an advantage in a given domain: a Scavenger, for example, can find more objects in the desert than an average citizen.]]></target>
       </segment>
     </unit>
     <unit id="9ySXrH1">
@@ -4048,7 +4048,7 @@ Achtung: Wenn er in seiner Deckung eine Aktion ausführt, verliert er seine Tarn
       </notes>
       <segment>
         <source>Wenn ein Wächter Nachtwache hält, gibt er der Stadt 30 zusätzliche Verteidigungspunkte. Außerdem haben sie eine um 5% höhere Überlebenschance, wenn der Angriff der Zombiehorden den Verteidigungspunkten der Stadt unterlegen ist.</source>
-        <target>When on watch, a guardian gives 30 additional defence points to the town, they also have a 5% greater chance of surviving if the hordes' attack is inferior to the town's defense points.</target>
+        <target>When on watch, a guardian gives 30 additional defence points to the town, they also have a 5% greater chance of surviving.</target>
       </segment>
     </unit>
     <unit id="xfwq_Tw">
@@ -6115,7 +6115,7 @@ Die Punkte für den Titel "Spiritueller Führer" kumulieren sich mit jedem Tag. 
       </notes>
       <segment>
         <source>Negierung: Wenn eine Privatstadt nicht bis Mitternacht des übernächsten Tages gefüllt ist, wird sie wieder negiert. Der Stadtgründer erhält dann alle investierten Heldentage zurück. Alle bereits getätigten Einschreibungen werden rückgängig gemacht.</source>
-        <target>Cancellation: a private town will be cancelled if it has not been filled within 2 days. Its creator will have any Hero days invested returned and any participating players will leave the town.</target>
+        <target>Cancellation: a private town will be cancelled if it has not been filled within 2 days. Any participating players will leave the town.</target>
       </segment>
     </unit>
     <unit id="QvajNih">
