--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -19654,5 +19654,68 @@
         <target>Für %num% weitere Städte</target>
       </segment>
     </unit>
+    <unit id=".Qkxxst" name="Stadttor zerstört!">
+      <notes>
+        <note category="german">Stadttor zerstört!</note>
+      </notes>
+      <segment>
+        <source>Stadttor zerstört!</source>
+        <target>Stadttor zerstört!</target>
+      </segment>
+    </unit>
+    <unit id="i02hvai">
+      <notes>
+        <note category="german">Das Stadttor wurde bei einem besonders furchtbaren Angriff aus den Angeln gerissen und in die Aussenwelt geschleudert. Du solltest dich heute Nacht besser nicht hier aufhalten, sonst wird diese Stadt dein Grab.</note>
+      </notes>
+      <segment>
+        <source>Das Stadttor wurde bei einem besonders furchtbaren Angriff aus den Angeln gerissen und in die Aussenwelt geschleudert. Du solltest dich heute Nacht besser nicht hier aufhalten, sonst wird diese Stadt dein Grab.</source>
+        <target>Das Stadttor wurde bei einem besonders furchtbaren Angriff aus den Angeln gerissen und in die Aussenwelt geschleudert. Du solltest dich heute Nacht besser nicht hier aufhalten, sonst wird diese Stadt dein Grab.</target>
+      </segment>
+    </unit>
+    <unit id="omwkh4e">
+      <notes>
+        <note category="german">Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.</note>
+      </notes>
+      <segment>
+        <source>Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.</source>
+        <target>Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.</target>
+      </segment>
+    </unit>
+    <unit id="WUioDKI" name="Das Stadttor ist zerstört!">
+      <notes>
+        <note category="german">Das Stadttor ist zerstört!</note>
+      </notes>
+      <segment>
+        <source>Das Stadttor ist zerstört!</source>
+        <target>Das Stadttor ist zerstört!</target>
+      </segment>
+    </unit>
+    <unit id="ixRzzXD">
+      <notes>
+        <note category="german">Die Stadt ist von Zombies zerstört worden: Es können keine Verbesserungen mehr stattfinden.</note>
+      </notes>
+      <segment>
+        <source>Die Stadt ist von Zombies zerstört worden: Es können keine Verbesserungen mehr stattfinden.</source>
+        <target>Die Stadt ist von Zombies zerstört worden: Es können keine Verbesserungen mehr stattfinden.</target>
+      </segment>
+    </unit>
+    <unit id="70HaeRK">
+      <notes>
+        <note category="german">Die Stadt ist verwüstet! Du kannst dein Haus nicht mehr ausbauen, weil es ebenfalls niedergebrannt ist.</note>
+      </notes>
+      <segment>
+        <source>Die Stadt ist verwüstet! Du kannst dein Haus nicht mehr ausbauen, weil es ebenfalls niedergebrannt ist.</source>
+        <target>Die Stadt ist verwüstet! Du kannst dein Haus nicht mehr ausbauen, weil es ebenfalls niedergebrannt ist.</target>
+      </segment>
+    </unit>
+    <unit id="sO7EUbm" name="ZERSTÖRT!!">
+      <notes>
+        <note category="german">ZERSTÖRT!!</note>
+      </notes>
+      <segment>
+        <source>ZERSTÖRT!!</source>
+        <target>ZERSTÖRT!!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
