--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -8780,7 +8780,7 @@
       </notes>
       <segment>
         <source>Was für ein Riesenschlamassel: %deaths% starben letzte Nacht in der Stadt! Ein Massaker, zu dem noch der zertrümmerter Schädel eines Haustiers zu zählen ist, der in den Toren verkeilt gefunden wurde. Vermisst jemand einen Hund?</source>
-        <target>du grand n'importe quoi : <strong>%deaths% morts</strong> chez nous hier soir ! Une hécatombe à laquelle il faut ajouter le crâne brisé d'un animal de compagnie trouvé coincé dans la Grande Porte.</target>
+        <target><![CDATA[du grand n'importe quoi : <strong>%deaths% morts</strong> chez nous hier soir ! Une hécatombe à laquelle il faut ajouter le crâne brisé d'un animal de compagnie trouvé coincé dans la Grande Porte.]]></target>
       </segment>
     </unit>
     <unit id="fbPbjvi">
@@ -19650,6 +19650,69 @@
       <segment>
         <source>Für %num% weitere Städte</source>
         <target>Für %num% weitere Städte</target>
+      </segment>
+    </unit>
+    <unit id=".Qkxxst" name="Stadttor zerstört!">
+      <notes>
+        <note category="german">Stadttor zerstört!</note>
+      </notes>
+      <segment>
+        <source>Stadttor zerstört!</source>
+        <target>portes détruites !</target>
+      </segment>
+    </unit>
+    <unit id="i02hvai">
+      <notes>
+        <note category="german">Das Stadttor wurde bei einem besonders furchtbaren Angriff aus den Angeln gerissen und in die Aussenwelt geschleudert. Du solltest dich heute Nacht besser nicht hier aufhalten, sonst wird diese Stadt dein Grab.</note>
+      </notes>
+      <segment>
+        <source>Das Stadttor wurde bei einem besonders furchtbaren Angriff aus den Angeln gerissen und in die Aussenwelt geschleudert. Du solltest dich heute Nacht besser nicht hier aufhalten, sonst wird diese Stadt dein Grab.</source>
+        <target>Les portes ont été ravagées puis emportées dans l'Outre-Monde lors d'un assaut particulièrement terrifiant. Il vaudrait mieux pour vous ne pas traîner ici ce soir ou cette ville sera votre tombeau</target>
+      </segment>
+    </unit>
+    <unit id="omwkh4e">
+      <notes>
+        <note category="german">Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.</note>
+      </notes>
+      <segment>
+        <source>Das passiert eben, wenn man eine Stadt ohne einen einzigen Einwohner zurücklässt.</source>
+        <target>Voila ce qui arrive quand on laisse une ville sans un seul habitant.</target>
+      </segment>
+    </unit>
+    <unit id="WUioDKI" name="Das Stadttor ist zerstört!">
+      <notes>
+        <note category="german">Das Stadttor ist zerstört!</note>
+      </notes>
+      <segment>
+        <source>Das Stadttor ist zerstört!</source>
+        <target>Les portes de la ville ont été détruites.</target>
+      </segment>
+    </unit>
+    <unit id="ixRzzXD">
+      <notes>
+        <note category="german">Die Stadt ist von Zombies zerstört worden: Es können keine Verbesserungen mehr stattfinden.</note>
+      </notes>
+      <segment>
+        <source>Die Stadt ist von Zombies zerstört worden: Es können keine Verbesserungen mehr stattfinden.</source>
+        <target>La ville a été ravagée par les zombies : aucune évolution ne peut plus être réalisée.</target>
+      </segment>
+    </unit>
+    <unit id="70HaeRK">
+      <notes>
+        <note category="german">Die Stadt ist verwüstet! Du kannst dein Haus nicht mehr ausbauen, weil es ebenfalls niedergebrannt ist.</note>
+      </notes>
+      <segment>
+        <source>Die Stadt ist verwüstet! Du kannst dein Haus nicht mehr ausbauen, weil es ebenfalls niedergebrannt ist.</source>
+        <target>La ville a été dévastée ! Vous ne pouvez plus améliorer votre maison car elle a été, elle aussi, réduite en cendres.</target>
+      </segment>
+    </unit>
+    <unit id="sO7EUbm" name="ZERSTÖRT!!">
+      <notes>
+        <note category="german">ZERSTÖRT!!</note>
+      </notes>
+      <segment>
+        <source>ZERSTÖRT!!</source>
+        <target>DETRUITES !!</target>
       </segment>
     </unit>
   </file>
