--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -979,7 +979,7 @@
       </notes>
       <segment>
         <source>Kettensäge (ohne Strom)</source>
-        <target>Chainsaw (incomplete)</target>
+        <target>Chainsaw (empty)</target>
       </segment>
     </unit>
     <unit id="4yWesEi" name="Batteriewerfer 1-PDTG (entladen)">
